Fix some style error as required